--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -4,8 +4,7 @@ name: deploy_frontend
 on:
   push:
     branches: [master]
-    paths:
-      - "frontend/**"
+    paths: -"frontend/**"
 
 jobs:
   build:
