frontend workflow commit

--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -4,7 +4,7 @@ name: deploy_frontend
 on:
   push:
     branches:
-    paths: -"frontend/**"
+    paths: - "frontend/**"
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob upload-batch --account-name azureresumefrontend1 --auth-mode key -d '$web' -s frontend
+            az storage blob upload-batch --account-name azureresumefrontend1 --auth-mode key -d '$web' -s frontend/
       - name: Purge CDN endpoint
         uses: azure/CLI@v1
         with:
