--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -4,7 +4,9 @@ name: deploy_frontend
 on:
   push:
     branches:
-    paths: - "frontend/**"
+      - "master"
+    paths:
+      - "frontend/**"
 
 jobs:
   build:
