--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -3,10 +3,10 @@ name: deploy_frontend
 
 on:
   push:
-    branches:
-      - "master"
-    paths:
-      - "frontend"
+    # branches:
+    #  - "master"
+    # paths:
+    #   - "frontend"
 
 jobs:
   build:
