--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -21,7 +21,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob upload-batch --account-name azureresumefrontend1 --auth-mode key -d '$web' -s frontend/
+            az storage blob upload-batch --account-name azureresumefrontend1 -d '$web' -s frontend/
       - name: Purge CDN endpoint
         uses: azure/CLI@v1
         with:
